2006-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : added -r:System.Data.dll for "make test".

2006-04-27  Peter Dennis Bartok  <pbartok@novell.com>

	* SWF.csproj: Updated, matching current .sources

2006-04-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* System.Windows.Forms_test.dll.sources: Added TabControlTest.cs.

2006-03-21  Jackson Harper  <jackson@ximian.com>

	* System.Windows.Forms.dll.resources: Add the keyboard resources.

2006-03-13  Peter Dennis Bartok  <pbartok@novell.com>

	* System.Windows.Forms.dll.sources: Added ProgressBarStyle.cs

2006-03-11  Alexander Olk  <alex.olk@googlemail.com>

	* System.Windows.Forms.dll.sources: Removed MimeGenerated.cs

2006-03-09  Jonathan Gilbert  <logic@deltaq.org>

	* System.Windows.Forms/AutoScaleMode.cs: Added new file for
	  the 2.0 enumeration.
	* System.Windows.Forms/ContainerControl.cs: Added stub for
	  AutoScaleMode property; outputs a message to stderr to
	  encourage people familiar with its behaviour to implement
	  it. :-)
	* System.Windows.Forms/Control.cs: Added stub for AutoScale;
	  outputs a message just like ContainerControl::AutoScaleMode.
	* System.Windows.Forms.dll.sources: Added AutoScaleMode.cs to
	  the list of files to build.

2006-02-28  Matt Hargett  <matt@use.net>

	* System.Windows.Forms_test.dll.sources: Added ComboBoxTests.cs

2006-1-12  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* build-csproj: Fixed so the csproj is usable.

2006-1-12  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* System.Windows.Forms.dll.sources: Added PageSetupDialog.cs.

2006-1-12  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* System.Windows.Forms.dll.sources: Added printing items and *committed* file this time.

2006-1-10  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* System.Windows.Forms.dll.sources: Add PrintPreviewDialog and PrintPreviewControl

2006-1-10  Jonathan Chambers  <jonathan.chambers@ansys.com>
