@@ -3,6 +3,8 @@
 -resource:resources/System.Windows.Forms.de.resources
 -resource:resources/SplitterNS.cur,System.Windows.Forms.SplitterNS.cur
 -resource:resources/SplitterWE.cur,System.Windows.Forms.SplitterWE.cur
+-resource:resources/NESW.cur,System.Windows.Forms.NESW.cur
+-resource:resources/NWSE.cur,System.Windows.Forms.NWSE.cur
 -resource:resources/DnDNo.cur,System.Windows.Forms.DnDNo.cur
 -resource:resources/DnDCopy.cur,System.Windows.Forms.DnDCopy.cur
 -resource:resources/DnDLink.cur,System.Windows.Forms.DnDLink.cur
