@@ -1,3 +1,7 @@
+2006-05-15  Peter Dennis Bartok  <pbartok@novell.com>
+
+	* NWSE.cur, NESW.cur: Added
+
 2006-03-21  Jackson Harper  <jackson@ximian.com>
 
 	* keyboards.resx: The keyboards files.
